phone layout issue fix

--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ footer {
   max-width: 800px;
 }
 
-@media (min-width: 425px) {
+@media (min-width: 375px) {
   .input-container {
     flex-direction: column;
     align-items: center;
